# Solar-system-simulator

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
header/: planet.h
src/: main.cpp  planet.cpp
